--- a/style.css
+++ b/style.css
@@ -421,6 +421,8 @@ span {
   font-size: 24px;
   font-weight: bold;
   text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .testimonial-card {
