--- a/style.css
+++ b/style.css
@@ -482,14 +482,24 @@ span {
 .faq-section-btn {
   margin-top: 30px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #5d2fce;
+  color: white;
+  padding: 10px 10px;
+  width: fit-content;
+  border-radius: 8px;
 }
 
 .quests-holder {
-  overflow: hidden;
-  height: auto;
-  border-bottom: 1px solid hsla(0, 0%, 100%, 0.3);
-  background-color: #fff;
+  border-bottom: 1px solid #ffffff4d;
+  background-color: blue;
   font-size: 20px;
+}
+
+.wrapper{
+  margin-bottom: 10px;
+
 }
 
 .faq-section {
@@ -925,10 +935,10 @@ footer p {
   .refer-btn {
     margin-left: auto;
     margin-right: auto;
-    padding: 32px 50px;
     margin-top: 30px;
     font-size: 20px;
     text-align: center;
+    padding: 16px 32px;
   }
 
   .refer {
@@ -951,6 +961,10 @@ footer p {
 
   .faq-section {
     padding: 100px;
+  }
+
+  .faq-section-btn{
+    padding: 16px 32px;
   }
 
   .answers {
