--- a/style.css
+++ b/style.css
@@ -104,7 +104,8 @@ p {
 }
 
 .header-img {
-  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
 .hero-section2 {
@@ -117,7 +118,8 @@ p {
 }
 
 .interest-rate-img {
-  width: 70%;
+  height: auto;
+  max-width: 80%;
   margin-top: 50px;
 }
 
@@ -151,16 +153,18 @@ span {
   color: #5d2fce;
 }
 
-.own,
-span {
-  padding-left: 20px;
+.own{
+  padding-right: 100px;
+  margin-left: 30px;
+  margin-bottom: 50px;
+  font-size: 28px;
 }
+
 
 .favorite-item {
   background-color: #eff5fd;
   padding-top: 20px;
-  padding-bottom: 50px;
-  margin-left: 0px;
+  padding-bottom: 100px;
 }
 
 .number {
@@ -206,10 +210,11 @@ span {
   background-color: #5d2fce;
   color: #ffffff;
   border-radius: 8px;
-  margin: 0;
   padding: 10px 10px;
   width: 20%;
   margin-left: 20px;
+  text-align: center;
+
 }
 
 .trending-stores {
@@ -242,8 +247,8 @@ span {
 }
 
 .konga-img {
-  width: 100%;
-  height: 290px;
+  height: auto;
+  max-width: 100%;
   margin-right: 10px;
   border-radius: 12px;
   background-size: cover;
@@ -292,7 +297,7 @@ span {
 }
 
 .products {
-  height: 300px;
+  height: auto;
   max-width: 100%;
   margin-bottom: 10px;
 }
@@ -313,6 +318,7 @@ span {
 }
 
 .partner-img {
+  height: auto;
   max-width: 80%;
   padding-left: 50px;
   background-size: contain;
@@ -385,7 +391,8 @@ span {
 }
 
 .build-img {
-  max-width: 70%;
+  height: auto;
+  max-width: 100%;
 }
 
 .build-img-holder {
@@ -435,8 +442,8 @@ span {
 }
 
 .img-testimonial {
-  width: 100%;
-  height: 300px;
+  height: auto;
+  max-width: 100%;
   margin-top: 30px;
   border-radius: 10px;
 }
@@ -458,14 +465,19 @@ span {
   color: #ffffff;
   border-radius: 8px;
   padding: 10px 10px;
-  width: fit-content;
-  margin-left: 132px;
   border: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .refer {
   background: linear-gradient(to right, #eef6ff, #f9cbf0);
   padding-bottom: 100px;
+}
+
+.refer-btn-wrapper {
+  display: flex;
+  width: 100%;
 }
 
 .refer-merchant-header {
@@ -558,26 +570,147 @@ footer p {
   justify-content: space-evenly;
 }
 
-@media (min-width: 800px) {
-  .merchants {
+@media (min-width:768px) {
+  nav{
+    margin-top: 20px;
+  }
+
+  .app{
+    padding: 20px 32px;
+  }
+   .merchants {
     background-color: #f2eefb;
     display: inline-block;
-    padding: 12px 20px;
+    padding: 20px 32px;
     border-radius: 8px;
     color: #5d2fce;
   }
 
   .get-item {
-    padding: 12px 20px;
+    padding: 20px 32px;
     border-radius: 8px;
-    background-color: #5d2fce;
-    color: #ffffff;
     margin: 2px 16px 0px 0px;
+    font-size: 20px;
   }
 
   .logo {
+    width: 40%;
     margin-top: 20px;
-    margin-left: 120px;
+    padding: 20px 32px;
+
+  }
+
+  .hero-section{
+    padding-top: 200px;
+  }
+
+
+  .own{
+    margin-left: 30px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    width: 50%;
+  }
+
+  .favorite-item-text{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  .get-started{
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    font-size: 23px;
+    padding: 16px 24px;
+  }
+
+  .electromart-img{
+    max-width: 100%;
+    height: 400px;
+  }
+
+  .img-testimonial-holder {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+
+  .img-testimonial {
+    max-width: 100%;
+    height: 350px;
+    margin-top: 30px;
+  }
+
+  .product-inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .customer-love{
+    font-size: 50px;
+    margin-top: 100px;
+  }
+
+  .shop-now, .build-btn, .how-to-btn{
+    padding: 16px 24px;
+    font-size: 23px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  .partner-img{
+    max-width: 60%;
+    display: flex;
+    margin: 0 auto;
+  }
+
+  .partner-header, .build-header{
+    font-size: 30px;
+  }
+
+  .partner-copy, .build-paragraph{
+    font-size: 24px;
+  }
+
+  .how-to-guides{
+    text-align: center;
+    padding: 30px;
+  }
+
+
+}
+
+@media (min-width: 992px){ 
+
+  nav{
+    margin-top: 20px;
+  }
+
+  .app{
+    padding: 24px 52px;
+  }
+   .merchants {
+    background-color: #f2eefb;
+    display: inline-block;
+    padding: 24px 52px;
+    border-radius: 8px;
+    color: #5d2fce;
+  }
+
+  .get-item {
+    padding: 24px 52px;
+    border-radius: 8px;
+    margin: 2px 16px 0px 0px;
+    font-size: 20px;
+  }
+
+  .logo {
+    width: 30%;
+    margin-top: 20px;
+    margin-left: 100px;
+
   }
 
   .nav-links {
@@ -589,12 +722,11 @@ footer p {
   }
 
   .home-header {
-    max-width: 50%;
     color: #0f0821;
-    font-size: 50px;
+    font-size: 90px;
     text-align: left;
-    padding-right: 60%;
     font-weight: bolder;
+    width: 50%;
   }
 
   .paragraph-copy {
@@ -632,7 +764,7 @@ footer p {
     background-position: 50% 50%;
     background-size: cover;
     background-color: #f2f2f2;
-    min-height: 100vh;
+    height: 100vh;
     width: 85%;
   }
 
@@ -662,14 +794,14 @@ footer p {
   }
 
   .interest-rate-header {
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 50px;
     width: 60%;
   }
 
   .interest-rate-img {
-    width: 40%;
-  }
+max-width: 50%;
+height: auto;  }
 
   .shop {
     background-color: #5d2fce;
@@ -677,15 +809,16 @@ footer p {
     border-radius: 8px;
     margin: 0;
     text-align: center;
-    padding: 16px 32px;
+    padding: 20px 32px;
     width: fit-content;
   }
 
   main {
     background-color: #ffffff;
-    width: 85%;
+    width: 80%;
     text-align: left;
     padding: 100px;
+    margin: 0 auto;
   }
 
   .line {
@@ -696,18 +829,13 @@ footer p {
   .favorite-item-text {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    padding-right: 40px;
   }
-
+  
   .favorite-item {
-    padding: 10px;
-    margin-left: 50px;
   }
 
-  .own,
-  span {
-    font-size: 50px;
-    margin-left: 0px;
+  .own{
+    font-size: 60px;
   }
 
   .share {
@@ -726,13 +854,14 @@ footer p {
     margin-top: 10px;
   }
 
-  .get-started {
-    font-size: 18px;
+  .get-started, .refer-btn, .faq-section-btn {
+    font-size: 20px;
+    font-weight: bold;
     text-align: center;
     background-color: #5d2fce;
     color: #ffffff;
     border-radius: 8px;
-    padding: 16px 32px;
+    padding: 24px 32px;
     width: fit-content;
     margin: 0 auto;
   }
@@ -753,22 +882,17 @@ footer p {
     display: flex;
   }
 
-  .trending-store-header {
-    gap: 600px;
-    padding: 20px 0px;
-  }
-
   .konga-img {
-    height: 600px;
+    height: 889px;
+    width: 100%;
   }
 
   .stores {
     display: flex;
-    justify-content: space-between;
   }
 
   .products {
-    height: 400px;
+    height: auto;
     max-width: 100%;
   }
 
@@ -783,8 +907,9 @@ footer p {
   }
 
   .customer-love {
-    margin: 0px;
-    font-size: 40px;
+    margin: 0;
+    padding-bottom: 50px;
+    font-size: 50px;
   }
 
   .product-page {
@@ -792,7 +917,6 @@ footer p {
   }
 
   .product-inner {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -825,9 +949,9 @@ footer p {
     text-align: left;
   }
 
-  .partner-paragraph,
-  .build-paragraph {
-    font-size: 20px;
+  .partner-paragraph, .build-paragraph
+  {
+    font-size: 30px;
     text-align: left;
     padding: 0;
     margin-top: 20px;
@@ -850,14 +974,31 @@ footer p {
     padding: 20px;
   }
 
+  .build-paragraph{
+    font-size: ;
+  }
+
   .how-to-content img {
     width: 50px;
+  }
+
+  .how-to-content{
+    text-align: left;
   }
 
   .how-to-btn {
     width: fit-content;
     padding: 16px 32px;
   }
+
+  .how-to-sub {
+    font-size: 30px;
+  }
+  
+  .how-to-paragraph {
+    font-size: 30px;
+  }
+  
 
   .build-financial {
     display: grid;
@@ -904,7 +1045,7 @@ footer p {
 
   .img-testimonial {
     width: 100%;
-    height: 250px;
+    height: 500px;
     margin-top: 30px;
   }
 
@@ -922,27 +1063,14 @@ footer p {
   .refer-merchant-header {
     font-size: bold;
     font-size: 70px;
-    padding-left: 100px;
-    padding-right: 100px;
+    width: 50%;
     margin: 0 auto;
-  }
-
-  .refer-btn-wrapper {
-    display: flex;
-    width: 100%;
-  }
-
-  .refer-btn {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    font-size: 20px;
-    text-align: center;
-    padding: 16px 32px;
+    padding-bottom: 40px;
   }
 
   .refer {
     padding-top: 100px;
+    padding-bottom: 100px;
   }
 
   .quests {
@@ -955,17 +1083,11 @@ footer p {
     font-size: 40px;
   }
 
-  .get-item-btn {
-    padding: 32px 52px;
-  }
 
   .faq-section {
     padding: 100px;
   }
 
-  .faq-section-btn{
-    padding: 16px 32px;
-  }
 
   .answers {
     justify-content: space-between;
